Added multisegment packets support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 project(MCPC_dissect)
 
-set(CMAKE_BUILD_TYPE RelWithDebInfo)
+set(CMAKE_BUILD_TYPE Debug)
 add_compile_options(-Wall -Wextra -pedantic -fvisibility=hidden -fuse-linker-plugin -Wno-pointer-arith)
 add_definitions("-DHAVE_CONFIG_H")
 include_directories("/usr/include/glib-2.0" "/usr/lib/glib-2.0/include" "/usr/lib64/glib-2.0/include" "/usr/include/wireshark")
